--- a/package.json
+++ b/package.json
@@ -4,11 +4,19 @@
   "description": "Open source Tailwind UI components to bootstrap your new apps, projects or landing websites!",
   "main": "lib/index.js",
   "scripts": {
-    "test": "*"
+    "dev-vue": "vite -c vite.config.vue.js",
+    "build-vue": "vite build -c vite.config.vue.js",
+    "serve-vue": "vite preview -c vite.config.vue.js",
+    "dev-react": "vite -c vite.config.react.js",
+    "build-react": "vite build -c vite.config.react.js",
+    "serve-react": "vite preview -c vite.config.react.js"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/FotieMConstant/revind.git"
+  },
+  "engines": {
+    "node": ">=12.0.0"
   },
   "keywords": [
     "react",
@@ -22,5 +30,15 @@
   "bugs": {
     "url": "https://github.com/FotieMConstant/revind/issues"
   },
-  "homepage": "https://github.com/FotieMConstant/revind#readme"
+  "homepage": "https://github.com/FotieMConstant/revind#readme",
+  "devDependencies": {
+    "react": "^17.0.0",
+    "react-dom": "^17.0.0",
+    "@vitejs/plugin-react-refresh": "^1.3.1",
+    "@vitejs/plugin-vue": "^1.2.3",
+    "@vue/compiler-sfc": "^3.0.5",
+    "vite": "^2.3.5",
+    "vue": "^3.0.5",
+    "tailwindcss": "^2.1.4"
+  }
 }
