--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "description": "Open source Tailwind UI components to bootstrap your new apps, projects or landing websites!",
   "main": "lib/index.js",
   "scripts": {
-    "dev-vue": "vite -c vite.config.vue.js",
-    "build-vue": "vite build -c vite.config.vue.js",
-    "serve-vue": "vite preview -c vite.config.vue.js",
-    "dev-react": "vite -c vite.config.react.js",
-    "build-react": "vite build -c vite.config.react.js",
-    "serve-react": "vite preview -c vite.config.react.js"
+    "build:css": "tailwind build",
+    "dev:vue": "vite -c vite.config.vue.js",
+    "build:vue": "vite build -c vite.config.vue.js",
+    "serve:vue": "vite preview -c vite.config.vue.js",
+    "dev:react": "vite -c vite.config.react.js",
+    "build:react": "vite build -c vite.config.react.js",
+    "serve:react": "vite preview -c vite.config.react.js",
+    "build": "npm run build:react && npm run build:vue && npm run build:css"
   },
   "repository": {
     "type": "git",
@@ -32,13 +34,19 @@
   },
   "homepage": "https://github.com/FotieMConstant/revind#readme",
   "devDependencies": {
-    "react": "^17.0.0",
-    "react-dom": "^17.0.0",
+    "@types/eslint": "^7.2.13",
     "@vitejs/plugin-react-refresh": "^1.3.1",
     "@vitejs/plugin-vue": "^1.2.3",
     "@vue/compiler-sfc": "^3.0.5",
+    "autoprefixer": "^10.2.6",
+    "eslint": "^7.28.0",
+    "eslint-plugin-react": "^7.24.0",
+    "eslint-plugin-vue": "^7.10.0",
+    "postcss": "^8.3.0",
+    "react": "^17.0.0",
+    "react-dom": "^17.0.0",
+    "tailwindcss": "^2.1.4",
     "vite": "^2.3.5",
-    "vue": "^3.0.5",
-    "tailwindcss": "^2.1.4"
+    "vue": "^3.0.5"
   }
 }
