--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "dev:react": "vite -c vite.config.react.js",
     "build:react": "vite build -c vite.config.react.js",
     "serve:react": "vite preview -c vite.config.react.js",
-    "build": "npm run build:react && npm run build:vue && npm run build:css"
+    "build": "npm run build:react && npm run build:vue && npm run build:css",
+    "lint": "npx eslint src/**/*.{jsx,vue,js}"
   },
   "repository": {
     "type": "git",
@@ -35,6 +36,7 @@
   "homepage": "https://github.com/FotieMConstant/revind#readme",
   "devDependencies": {
     "@types/eslint": "^7.2.13",
+    "@types/tailwindcss": "^2.0.5",
     "@vitejs/plugin-react-refresh": "^1.3.1",
     "@vitejs/plugin-vue": "^1.2.3",
     "@vue/compiler-sfc": "^3.0.5",
@@ -43,8 +45,10 @@
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-vue": "^7.10.0",
     "postcss": "^8.3.0",
+    "prop-types": "^15.7.2",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
+    "react-router-dom": "^5.2.0",
     "tailwindcss": "^2.1.4",
     "vite": "^2.3.5",
     "vue": "^3.0.5"
