--- a/package.json
+++ b/package.json
@@ -42,9 +42,12 @@
     "@vue/compiler-sfc": "^3.0.5",
     "autoprefixer": "^10.2.6",
     "eslint": "^7.28.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-vue": "^7.10.0",
     "postcss": "^8.3.0",
+    "prettier": "2.3.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
