--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "prop-types": "^15.7.2",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
+    "react-is": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "tailwindcss": "^2.1.4",
     "vite": "^2.3.5",
