vue router & component template created (with component-gen script)

--- a/package.json
+++ b/package.json
@@ -55,8 +55,9 @@
     "react-is": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "tailwindcss": "^2.1.4",
+    "uuid": "^8.3.2",
     "vite": "^2.3.5",
     "vue": "^3.0.5",
-    "vue-router": "^3.5.1"
+    "vue-router": "^4.0.8"
   }
 }
