--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -6,25 +6,26 @@
         "build": "build-storybook"
     },
     "dependencies": {
+        "prop-types": "^15.7.2",
         "react": "^17.0.0",
-        "react-dom": "^17.0.0"
+        "react-dom": "^17.0.0",
+        "react-is": "^16.13.1",
+        "uuid": "^8.3.2"
     },
     "devDependencies": {
-        "@babel/core": "^7.14.6",
-        "@mdx-js/react": "^1.6.22",
-        "@storybook/addon-actions": "^6.3.2",
         "@storybook/addon-essentials": "^6.3.2",
         "@storybook/addon-links": "^6.3.2",
         "@storybook/addon-postcss": "^2.0.0",
         "@storybook/react": "^6.3.2",
-        "@types/react": "^17.0.0",
-        "@types/react-dom": "^17.0.0",
+        "@types/react": "^17.0.2",
+        "@types/react-dom": "^17.0.2",
         "autoprefixer": "^10.2.6",
-        "babel-loader": "^8.2.2",
+        "html-webpack-plugin": "^5.0.0",
         "postcss": "^8.3.5",
         "storybook-builder-vite": "^0.0.10",
         "tailwindcss": "^2.2.4",
         "typescript": "^4.3.2",
-        "vite-plugin-ts-checker": "0.1.3"
-    }
+        "vite-plugin-ts-checker": "^0.1.3"
+    },
+    "license": "MIT"
 }
