--- a/packages/vue/tsconfig.json
+++ b/packages/vue/tsconfig.json
@@ -6,6 +6,7 @@
     "target": "esnext",
     "module": "esnext",
     "moduleResolution": "node",
+    "skipLibCheck": true,
     "strict": true,
     "jsx": "preserve",
     "sourceMap": true,
