--- a/packages/vue/package.json
+++ b/packages/vue/package.json
@@ -1,31 +1,32 @@
 {
-  "name": "@revind/vue",
-  "version": "0.0.1",
-  "scripts": {
-    "start": "BROWSER=none start-storybook -p 6006",
-    "build": "build-storybook"
-  },
-  "dependencies": {
-    "vue": "^3.0.5"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.14.6",
-    "@storybook/addon-actions": "^6.3.2",
-    "@storybook/addon-essentials": "^6.3.2",
-    "@storybook/addon-links": "^6.3.2",
-    "@storybook/addon-postcss": "^2.0.0",
-    "@storybook/vue3": "^6.3.2",
-    "@vitejs/plugin-vue": "^1.2.4",
-    "@vue/compiler-sfc": "^3.0.5",
-    "autoprefixer": "^10.2.6",
-    "babel-loader": "^8.2.2",
-    "postcss": "^8.3.5",
-    "storybook-builder-vite": "^0.0.10",
-    "tailwindcss": "^2.2.4",
-    "typescript": "^4.3.2",
-    "vite-plugin-ts-checker": "^0.1.3",
-    "vue-loader": "^16.3.0",
-    "vue-tsc": "^0.0.24"
-  },
-  "license": "MIT"
+    "name": "@revind/vue",
+    "version": "0.0.1",
+    "scripts": {
+        "start": "BROWSER=none start-storybook -p 6006",
+        "build": "build-storybook"
+    },
+    "dependencies": {
+        "vue": "^3.0.5",
+        "@revind/styles": "*"
+    },
+    "devDependencies": {
+        "@babel/core": "^7.14.6",
+        "@storybook/addon-actions": "^6.3.2",
+        "@storybook/addon-essentials": "^6.3.2",
+        "@storybook/addon-links": "^6.3.2",
+        "@storybook/addon-postcss": "^2.0.0",
+        "@storybook/vue3": "^6.3.2",
+        "@vitejs/plugin-vue": "^1.2.4",
+        "@vue/compiler-sfc": "^3.0.5",
+        "autoprefixer": "^10.2.6",
+        "babel-loader": "^8.2.2",
+        "postcss": "^8.3.5",
+        "storybook-builder-vite": "^0.0.10",
+        "tailwindcss": "^2.2.4",
+        "typescript": "^4.3.2",
+        "vite-plugin-ts-checker": "^0.1.3",
+        "vue-loader": "^16.3.0",
+        "vue-tsc": "^0.0.24"
+    },
+    "license": "MIT"
 }
