--- a/packages/styles/package.json
+++ b/packages/styles/package.json
@@ -1,13 +1,21 @@
 {
     "name": "@revind/styles",
     "version": "0.0.1",
-    "main": "dist/index",
+    "main": "dist/cjs/index",
+    "module": "dist/index",
+    "exports": {
+        ".": {
+            "require": "./dist/cjs/index.js",
+            "import": "./dist/index.js"
+        }
+    },
     "scripts": {
-      "start": "tsc -w",
-      "build": "tsc"
+        "start": "concurrently 'tsc -w' 'tsc -w -m commonjs --outDir ./dist/cjs'",
+        "build": "concurrently 'tsc' 'tsc -m commonjs --outDir ./dist/cjs'"
     },
     "license": "MIT",
     "devDependencies": {
+        "concurrently": "^6.2.0",
         "typescript": "^4.3.2"
     }
 }
