--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -15,6 +15,7 @@
         "uuid": "^8.3.2"
     },
     "devDependencies": {
+        "@babel/core": "^7.14.6",
         "@storybook/addon-essentials": "^6.3.2",
         "@storybook/addon-links": "^6.3.2",
         "@storybook/addon-postcss": "^2.0.0",
@@ -23,9 +24,11 @@
         "@types/react-dom": "^17.0.2",
         "@types/react-is": "^17.0.1",
         "autoprefixer": "^10.2.6",
+        "babel-loader": "^8.2.2",
         "html-webpack-plugin": "^5.0.0",
         "postcss": "^8.3.5",
         "storybook-builder-vite": "^0.0.10",
+        "storybook-dark-mode": "^1.0.8",
         "tailwindcss": "^2.2.4",
         "typescript": "^4.3.2",
         "vite-plugin-ts-checker": "^0.1.3"
