--- a/packages/styles/package.json
+++ b/packages/styles/package.json
@@ -1,8 +1,13 @@
 {
     "name": "@revind/styles",
     "version": "0.0.1",
-    "main": "dist/cjs/index",
-    "module": "dist/index",
+    "type": "module",
+    "types": "dist/index.d.ts",
+    "main": "dist/index",
+    "exports": {
+      "import": "./dist/index.js",
+      "default": "./dist/index.js"
+    },
     "description": "revind's default style-objects (default theme like)",
     "keywords": [
         "tailwindcss",
@@ -17,19 +22,12 @@
     "bugs": {
         "url": "https://github.com/FotieMConstant/revind/issues"
     },
-    "exports": {
-        ".": {
-            "require": "./dist/cjs/index.js",
-            "import": "./dist/index.js"
-        }
-    },
     "scripts": {
-        "start": "concurrently 'tsc -w' 'tsc -w -m commonjs --outDir ./dist/cjs'",
-        "build": "concurrently 'tsc' 'tsc -m commonjs --outDir ./dist/cjs'"
+        "start": "tsc -w",
+        "build": "tsc"
     },
     "license": "MIT",
     "devDependencies": {
-        "concurrently": "^6.2.0",
         "typescript": "^4.3.2"
     }
 }
