--- a/packages/vue/package.json
+++ b/packages/vue/package.json
@@ -34,6 +34,7 @@
         "postcss": "^8.3.5",
         "typescript": "^4.3.2",
         "vite-plugin-ts-checker": "^0.1.3",
+        "vite": "^2.4.4",
         "vue-loader": "^16.3.0",
         "vue-tsc": "^0.0.24"
     },
